Modulo to control dependency injection

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -368,3 +368,5 @@ neo4j.password = "ep123"
 # Grobid settings
 grobid.home = "grobid-home"
 grobid.properties = "grobid-home/config/grobid.properties"
+
+documentParser = services.parsers.GROBIDDocumentParser
