--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,7 +58,7 @@ play.modules {
   # explicitly below.
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
-
+  enabled += modules.Module
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
 }
@@ -369,4 +369,4 @@ neo4j.password = "ep123"
 grobid.home = "grobid-home"
 grobid.properties = "grobid-home/config/grobid.properties"
 
-documentParser = services.parsers.GROBIDDocumentParser
+documentParser = services.parsers.GrobIDDocumentParser
