Using Microsoft Academic Search API

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -369,4 +369,8 @@ neo4j.password = "ep123"
 grobid.home = "grobid-home"
 grobid.properties = "grobid-home/config/grobid.properties"
 
-documentParser = services.parsers.GrobIDDocumentParser
+documentSearcher = services.search.MicrosoftAcademicSearcher
+#documentSearcher = services.search.PapersIndexSearcher
+
+# Microsoft Academic Search API Ocp-Apim-Subscription-Key
+Ocp-Apim-Subscription-Key = "7b8b69fc65be4955bb7b19951badb2d0"
